add approveorderchr && rejectorderchr